src/objects/FieldExperienceProcess__c.object
<CustomObject>
    <fields>
        <fullName>DTState1__c</fullName>
        <description>First Half of DT State Formula from Field Experience</description>
        <formula>IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Alabama&quot;),&quot;Alabama&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Alaska&quot;),&quot;Alaska&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Arizona&quot;),&quot;Arizona&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Arkansas&quot;),&quot;Arkansas&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;California&quot;),&quot;California&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Colorado&quot;),&quot;Colorado&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Connecticut&quot;),&quot;Connecticut&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Delaware&quot;),&quot;Delaware&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;District of Columbia&quot;),&quot;District of Columbia&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;DoD AA - Armed Forces America&quot;),&quot;DoD AA - Armed Forces America&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;DoD AE - Armed Forces Europe&quot;),&quot;DoD AE - Armed Forces Europe&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;DoD AP - Armed Forces Pacific&quot;),&quot;DoD AP - Armed Forces Pacific&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Florida&quot;),&quot;Florida&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Georgia&quot;),&quot;Georgia&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Guam&quot;),&quot;Guam&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Hawaii&quot;),&quot;Hawaii&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Idaho&quot;),&quot;Idaho&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Illinois&quot;),&quot;Illinois&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Indiana&quot;),&quot;Indiana&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Iowa&quot;),&quot;Iowa&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Kansas&quot;),&quot;Kansas&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Kentucky&quot;),&quot;Kentucky&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Louisiana&quot;),&quot;Louisiana&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Maine&quot;),&quot;Maine&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Maryland&quot;),&quot;Maryland&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Massachusetts&quot;),&quot;Massachusetts&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Michigan&quot;),&quot;Michigan&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Minnesota&quot;),&quot;Minnesota&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Mississippi&quot;),&quot;Mississippi&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Missouri&quot;),&quot;Missouri&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Montana&quot;),&quot;Montana&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Nebraska&quot;),&quot;Nebraska&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Nevada&quot;),&quot;Nevada&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;New Hampshire&quot;),&quot;New Hampshire&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;New Jersey&quot;),&quot;New Jersey&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;New Mexico&quot;),&quot;New Mexico&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;New York&quot;),&quot;New York&quot;&amp;BR(),NULL)</formula>
        <label>DT State 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTState2__c</fullName>
        <description>Second Half of DT State Formula from Field Experience</description>
        <formula>IF(INCLUDES(FieldExperience__r.DTState__c,&quot;North Carolina&quot;),&quot;North Carolina&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;North Dakota&quot;),&quot;North Dakota&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Northern Mariana Islands&quot;),&quot;Northern Mariana Islands&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Ohio&quot;),&quot;Ohio&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Oklahoma&quot;),&quot;Oklahoma&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Oregon&quot;),&quot;Oregon&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Pennsylvania&quot;),&quot;Pennsylvania&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Puerto Rico&quot;),&quot;Puerto Rico&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Rhode Island&quot;),&quot;Rhode Island&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;South Carolina&quot;),&quot;South Carolina&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;South Dakota&quot;),&quot;South Dakota&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Tennessee&quot;),&quot;Tennessee&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Texas&quot;),&quot;Texas&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Utah&quot;),&quot;Utah&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Vermont&quot;),&quot;Vermont&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Virginia&quot;),&quot;Virginia&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Virgin Islands&quot;),&quot;Virgin Islands&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Washington&quot;),&quot;Washington&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;West Virginia&quot;),&quot;West Virginia&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Wisconsin&quot;),&quot;Wisconsin&quot;&amp;BR(),NULL)&amp; 
IF(INCLUDES(FieldExperience__r.DTState__c,&quot;Wyoming&quot;),&quot;Wyoming&quot;&amp;BR(),NULL)</formula>
        <label>DT State 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTState__c</fullName>
        <description>All DT States from Field Experience object</description>
        <label>DT State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DatesAbsent__c</fullName>
        <label>Dates Absent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictPlacementStatus__c</fullName>
        <description>The status the Placement Specialist is in the placement process with the school district.</description>
        <inlineHelpText>District Contacted = Waiting to hear from District
In Progress = Made contact and awaiting details
Completed = District said go directly to school or
Placement, Host Teacher, Grade, Dates, Length, Subject, #IEP, Received for this school</inlineHelpText>
        <label>District Placement Status</label>
        <picklist>
            <picklistValues>
                <fullName>District Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Experience Processes (District)</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotPass__c</fullName>
        <formula>If(FieldExperience__r.DoNotPass__c=True,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Pass</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EthicalPractitionerAttitude__c</fullName>
        <label>Ethical Practitioner: Attitude</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EthicalPractitionerInteractions__c</fullName>
        <label>Ethical Practitioner: Interactions</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExamDetails__c</fullName>
        <label>Exam Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamRegistrationDate__c</fullName>
        <label>Exam Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExplanationorDemonstrationofContent__c</fullName>
        <label>Explanation or Demonstration of Content</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FEAdmissionStatus__c</fullName>
        <description>Admission Status Brought Down from the Field Experience</description>
        <formula>TEXT(FieldExperience__r.AdmissionStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Admission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEAppeal3rdCohortReason__c</fullName>
        <inlineHelpText>Please explain the reason/s why your student did not complete DT 2 previous times.</inlineHelpText>
        <label>FE Appeal 3rd Cohort Reason</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealAuditPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you appealing because your student did not meet audit requirements?</inlineHelpText>
        <label>FE Appeal Audit Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealBasicSkillsNo__c</fullName>
        <inlineHelpText>Passing basic skills are required before a student may enter the classroom for PCE. This means your student has not yet begun PCE. Please explain why your student has not passed basic skills and why the student merits an extension. reasonable extension?</inlineHelpText>
        <label>FE Appeal Basic Skills No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealBasicSkills__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Basic skills exams – passed and posted to Degree Plan?</inlineHelpText>
        <label>FE Appeal Basic Skills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealContentExamReason__c</fullName>
        <label>FE Appeal Content Exam Reason</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealContentExamStatus__c</fullName>
        <inlineHelpText>State Required Content Exam/s.</inlineHelpText>
        <label>FE Appeal Content Exam Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Taken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FEAppealContentExamsNo__c</fullName>
        <inlineHelpText>You indicated that your student has not registered to take the content exam/s by the required deadline. Please explain why not. What do you feel is a reasonable extension?</inlineHelpText>
        <label>FE Appeal Content Exams No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealContentExamsRemaining__c</fullName>
        <inlineHelpText>What state content exam/s does your student need to pass for DT?</inlineHelpText>
        <label>FE Appeal Content Exams Remaining</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealContentExams__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>State Required content exams – passed and posted to Degree Plan?</inlineHelpText>
        <label>FE Appeal Content Exams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealContentRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Registered to take exam/s?</inlineHelpText>
        <label>FE Appeal Content Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealETPPassedNo__c</fullName>
        <inlineHelpText>You indicated that your student has not completed the required number of Effective Teaching Practices (ETP) tasks by the required deadline. Please explain why not. What do you feel is a reasonable extension?</inlineHelpText>
        <label>FE Appeal ETP Passed No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealETPPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ETP – Has you student met assessment task requirements for Effective Teaching Practices as outlined in the DT Cohort requirements and Timeline?</inlineHelpText>
        <label>FE Appeal ETP Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealMentorMangerApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you reviewed this appeal with your mentor manager and does he/she approve of its submission?</inlineHelpText>
        <label>FE Appeal Mentor Manger Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealPCEApprovedNo__c</fullName>
        <inlineHelpText>You indicated that your student has not yet been approved to begin in-school PCE tasks. Please explain why not. What do you feel is a reasonable extension?</inlineHelpText>
        <label>FE Appeal PCE Approved No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealPCEApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PCE Phase Approved?</inlineHelpText>
        <label>FE Appeal PCE Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealPlacementVariationReason__c</fullName>
        <inlineHelpText>Please explain the circumstance’s for this appeal. (Note that placements must meet certain criteria based on program area and state license)</inlineHelpText>
        <label>FE Appeal Placement Variation Reason</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealReason__c</fullName>
        <inlineHelpText>Please explain the circumstance’s for this appeal.</inlineHelpText>
        <label>FE Appeal Reason</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealSFAWNo__c</fullName>
        <inlineHelpText>You indicated that your student has not passed SFAW on the Degree Plan.  Please explain why not and why the student should be allowed to continue without this key component that is needed for obtaining a placement for the student.</inlineHelpText>
        <label>FE Appeals SFAW No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEAppealSFAW__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SFAW (resume, photo and philosophy of teaching statement) – posted to Degree Plan?</inlineHelpText>
        <label>FE Appeal SFAW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEAppealStatus__c</fullName>
        <label>FE Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requesting further information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation until future date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Manager Field Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Placement Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Dean of TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Manager Field Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Placement Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Dean of TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed; assigned to PS for decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FEAppealTotalObjExamsRemaining__c</fullName>
        <inlineHelpText>How many objective exams does your student have to pass in total for DT?</inlineHelpText>
        <label>FE Appeal Total Obj Exams Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEAppealTotalTasksRemaining__c</fullName>
        <inlineHelpText>How many total tasks does your student have to complete in total for DT?</inlineHelpText>
        <label>FE Appeal Total Tasks Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEApprovalOtherReqsPassedNo__c</fullName>
        <inlineHelpText>You indicated that your student has not met other prerequisite assessments by the required deadline. Please explain why not. What do you feel is a reasonable extension?</inlineHelpText>
        <label>FE Approval Other Reqs Passed No</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEApprovalOtherReqsPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Other Timeline Requirements – Has your student met other prerequisite assessment requirements as outlined in the DT Cohort Requirements and Timeline (Interdisciplinary course work and Foundations of Teaching, if applicable)?</inlineHelpText>
        <label>FE Approval Other Reqs Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEPCEPhaseStatus__c</fullName>
        <formula>TEXT(FieldExperience__r.PCEPhaseStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE PCE Phase Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldExperience__c</fullName>
        <label>Field Experience</label>
        <referenceTo>FieldExperience__c</referenceTo>
        <relationshipLabel>Field Experience Processes</relationshipLabel>
        <relationshipName>FieldExperiencesProcesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstDayAbsent__c</fullName>
        <description>The first day the student will be absent from their field experience/</description>
        <inlineHelpText>Please enter the first day of you absence.</inlineHelpText>
        <label>First Day Absent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GradesPlaced__c</fullName>
        <label>Grades Placed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-K</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HTEmail__c</fullName>
        <label>HT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HealthPlacementHours__c</fullName>
        <description>Number of hours for the Health student&apos;s clinical placement.</description>
        <label>Health Placement Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthPlacementStartDate__c</fullName>
        <description>Date the student will start their clinicals for Health Placements</description>
        <label>Health Placement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HostTeacherEmail__c</fullName>
        <formula>HostTeacher__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Teacher Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostTeacherFirstName__c</fullName>
        <formula>HostTeacher__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Teacher First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostTeacherLastName__c</fullName>
        <formula>HostTeacher__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Teacher Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostTeacherPhone__c</fullName>
        <formula>HostTeacher__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Teacher Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostTeacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The teacher hosting our student for demonstration teaching</description>
        <label>Host Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FE Host Teacher</relationshipLabel>
        <relationshipName>Field_Experience_Processes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IEPNumberInClass__c</fullName>
        <description>The number of students in the classroom in this placement with an Individual Education Plan (IEP)</description>
        <inlineHelpText>Number of student with an Individual Education Plan in this placement.</inlineHelpText>
        <label>IEP Number In Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastDayAbsent__c</fullName>
        <description>The last day of a students absence from their field experience.</description>
        <inlineHelpText>Please enter the last day of your absence.</inlineHelpText>
        <label>Last Day Absent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Audit_Results__c</fullName>
        <formula>IF(  FieldExperience__r.LatestTasksRemaining__c=0 , &quot;None&quot;,  &quot;Tasks Remaining: &quot;  &amp; TEXT(FieldExperience__r.LatestTasksRemaining__c) &amp; &quot; / &quot; &amp; &quot;Objective Exams Remaining: &quot; &amp; TEXT(FieldExperience__r.LatestObjectiveExamsRemaining__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Audit Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LengthofPlacement__c</fullName>
        <label>Length of Placement</label>
        <picklist>
            <picklistValues>
                <fullName>10 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semester Long Placement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LessonClosure__c</fullName>
        <label>Lesson Closure</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;No&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;No&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LicensureState__c</fullName>
        <description>State of Licensure from Field Experience</description>
        <formula>TEXT(FieldExperience__r.State__c)</formula>
        <inlineHelpText>State of Licensure</inlineHelpText>
        <label>Licensure State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Mentor Contact for CC to mentor on workflow emails</description>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FieldExperienceProcesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewDistrictContact__c</fullName>
        <label>New District Contact</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewDistrict__c</fullName>
        <label>New District</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewProfessionalDomain__c</fullName>
        <description>Whether or not the student falls in the new professional domain, which controls which observations they receive</description>
        <formula>if (value(Student__r.ProgramCatalogTerm__c) &gt;=201308 &amp;&amp; Student__r.ProgramCode__c &lt;&gt; &apos;MEDECE&apos; &amp;&amp; Student__r.ProgramCode__c &lt;&gt; &apos;BAECE&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not the student falls in the new professional domain</inlineHelpText>
        <label>New Professional Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewSchoolContact__c</fullName>
        <label>New School Contact</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewSchool__c</fullName>
        <label>New School</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofDaysAbsent__c</fullName>
        <label>Number of Days Absent</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>